--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "co": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1"
   }
